<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card.view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:background="@drawable/login_img"
    tools:context=".WelcomeActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/back"
        android:textSize="18sp"
        app:cornerRadius="20dp" />

    <TextView
        android:id="@+id/benvenuto"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="115dp"
        android:text="@string/introduction"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/questionario"
        android:textSize="18sp"
        app:cornerRadius="20dp" />

</LinearLayout>