<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card.view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:background="@drawable/login_img"
    tools:context=".HomeActivity">


    <Button
        android:id="@+id/logout"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/logout"
        android:textSize="18sp"
        app:cornerRadius="20dp" />

    <TextView
        android:id="@+id/bentornato"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/welcomeagain"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="115dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

</LinearLayout>