<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card.view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    android:orientation="vertical"
    android:background="@drawable/login_img"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/titleregistration"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registration_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/addusername"
        android:textColor="@color/dark_green"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_username"
        android:background="@drawable/custom_editext"
        android:drawablePadding="8dp"
        android:hint="Username"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <TextView
    android:id="@+id/registration_mail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:text="@string/addmail"
    android:textColor="@color/dark_green"
    android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_mail"
        android:background="@drawable/custom_editext"
        android:drawablePadding="8dp"
        android:hint="Email"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <TextView
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/addpassword"
        android:textColor="@color/dark_green"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/edit_password"
        android:background="@drawable/custom_editext"
        android:drawablePadding="8dp"
        android:hint="Password"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/sendregistration"
        android:textSize="18sp"
        app:cornerRadius="20dp" />

</LinearLayout>